--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="vgs-render"></div>
     <div class="vgs-button"></div>
   </div>
-  <div id="gif-view"></div>
+  <div id="gif-view" data-state="still"></div>
 </body>
 
 </html>
